[package]
authors = ["Sakura"]
name = "pink_log"
description = "A simple lightweight logger written in Rust (WIP)"
license-file = "LICENSE"
keywords = ["logging"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
