[package]
authors = ["Sakura"]
name = "pink_log"
description = "A simple lightweight logger for Rust"
license = "GPL-3"
license-file = "LICENSE"
keywords = ["logging"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
